# rdbc

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml
dbc/: DBC_Specification.md
dbc/mytest/: a.dbc
src/: _bin_utils.rs  ast.rs  bit_timing.rs  dbc_bus_configuration.rs  dbc_can_nodes.rs  dbc_names.rs  dbc_parser.rs  dbc_signal_value_table.rs  dbc_version.rs  encoding.rs  error.rs  file.rs  lib.rs  main.rs  network.rs  network_ast.rs  new_symbols.rs  node.rs
src/ast/: attribute.rs  attribute_default.rs  attribute_definition.rs  attribute_value.rs  bit_timing.rs  char_string.rs  comment.rs  common_parsers.rs  dbc_error.rs  dbc_message.rs  dbc_signal.rs  env_var.rs  env_var_data.rs  env_var_value_descriptions.rs  error.rs  message.rs  network_ast.rs  new_symbols.rs  nodes.rs  signal.rs  signal_value_descriptions.rs  value_descriptions.rs  value_tables.rs  version.rs
tests/: snapshots.rs
tests/snapshots-dbc-cantools/: !error___CamelCaseEmpty.snap  !error___issue_168.snap  !error___sig_groups.snap  abs.snap  add_two_dbc_files_1.snap  add_two_dbc_files_2.snap  attribute_Event.snap  attributes.snap  bad_message_length.snap  bus_comment_bare.snap  bus_comment_bare_out.snap  choices.snap  choices_issue_with_name.snap  cp1252.snap  dump_signal_choices.snap  emc32.snap  empty_choice.snap  empty_ns.snap  fd_test.snap  issue_163_newline.snap  issue_199.snap  issue_199_extended.snap  issue_63.snap  issue_636_negative_scaling.snap  issue_725.snap  j1939.snap  mod_name_len_dest.snap  mod_name_len_src.snap  motohawk_fd.snap  motohawk_use_round.snap  motohawk_with_comments.snap  msxii_system_can.snap  no_sender.snap  open_actuator.snap  sig_groups_del.snap  signed.snap  socialledge-written-by-cantools-with-default-sort-signals.snap  socialledge-written-by-cantools-with-sort-signals-by-name.snap  socialledge-written-by-cantools.snap  test_extended_id_dump.snap  (+4 more)
tests/snapshots-mytest/: DBC_template.snap  abs.snap  long_names.snap
