[package]
name = "rdbc"
version = "0.1.0"
edition = "2021"

[lib]
name = "rdbc"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "dbc2json"
path = "src/bin/dbc2json.rs"

[dependencies]
anyhow = "1.0.88"
env_logger = "0.11.5"
escape8259 = "0.5.3"
log = "0.4.22"
nom = "7.1.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
