[package]
name = "rrdbc"
version = "0.1.0"
authors = ["MDGSF"]
edition = "2021"
description = "dbc parser"
readme = "README.md"
repository = "https://github.com/MDGSF/rdbc"
license-file = "LICENSE"
keywords = ["dbc", "parser", "format"]

[lib]
name = "rrdbc"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "dbc2json"
path = "src/bin/dbc2json.rs"

[[bin]]
name = "json2dbc"
path = "src/bin/json2dbc.rs"

[[bin]]
name = "toutf8"
path = "src/bin/toutf8.rs"

[dependencies]
anyhow = "1.0.88"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
env_logger = "0.11.5"
log = "0.4.22"
nom = "7.1.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
structopt = "0.3.26"
thiserror = "1.0.63"
