[package]
name = "rrdbc"
version = "0.1.0"
authors = ["MDGSF"]
edition = "2021"
description = "dbc parser"
readme = "README.md"
repository = "https://github.com/MDGSF/rdbc"
license = "MIT OR Apache-2.0"
keywords = ["dbc", "parser", "format"]

[lib]
name = "rrdbc"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "dbcfmt"
path = "src/bin/dbcfmt.rs"

[[bin]]
name = "dbc2json"
path = "src/bin/dbc2json.rs"

[[bin]]
name = "json2dbc"
path = "src/bin/json2dbc.rs"

[[bin]]
name = "toutf8"
path = "src/bin/toutf8.rs"

[[bin]]
name = "gbk2utf8"
path = "src/bin/gbk2utf8.rs"

[[bin]]
name = "utf82gbk"
path = "src/bin/utf82gbk.rs"

[dependencies]
anyhow = "1.0.88"
encoding_rs = "0.8.34"
env_logger = "0.11.5"
log = "0.4.22"
nom = "8.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
structopt = "0.3.26"
thiserror = "2.0.17"
